[package]
name    = "xkbcommon-sys"
version = "0.7.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"
build   = "build.rs"

description = "Bindings to libxkbcommon"
repository  = "https://github.com/meh/rust-xkbcommon-sys"
keywords    = ["xkb", "xkbcommon", "x11", "xcb"]

[build-dependencies]
pkg-config = "0.3"

[dependencies]
libc = "0.2"

[features]
static = []
x11    = []
